// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert does not render if message props is empty 1`] = `
<DocumentFragment>
  <div
    class="alert alert--error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly when an error occurs 1`] = `
<DocumentFragment>
  <div
    class="alert alert--error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly when successful 1`] = `
<DocumentFragment>
  <div
    class="alert alert--success"
  >
    Success!
  </div>
</DocumentFragment>
`;
